--- a/style.css
+++ b/style.css
@@ -1,4 +1,64 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+        background-color:black;
+        font-family: Arial, Helvetica, sans-serif;
+        color: white;
+        display: flex;
+        align-content: center;
+}
+h1{
+    color:grey;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 35px;
+    margin-left: 12%;
+}
 
+.maindiv {
+    background-color: white;
+    color:black;
+    border-radius: 25px;
+    padding-bottom: 2%;
+    padding-top: 3%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    width: 600px;
+    margin: auto;
+}
 
+footer {
+    padding: 5px;
+    font-family: 'Times New Roman', Times, serif, Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 20px ;
+    margin: start;
+    margin-left: 12%;
+}
+
+.calculator {
+    display: flex;
+    flex-direction: column;
+    padding-left: 6.7%;
+    margin: auto;
+}
+
+.calculatorElement {
+    display: flex;
+    /* display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: space-around;
+    justify-content: space-around; */
+}
+.span {
+    padding:3px;
+}
+label {
+    display: inline-block;
+    font-size: 20px;
+    width: 175px;
+}
+button {
+    margin-top: 2px;
+}
+p{
+    background-color: yellow;
+}
