--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ footer {
     justify-content: space-around; */
 }
 .span {
-    padding:3px;
+    padding-top:3px;
 }
 label {
     display: inline-block;
